--- a/front-end/src/styles.css
+++ b/front-end/src/styles.css
@@ -68,7 +68,17 @@
   }
 }
 
-/* Single product page - product nam */
+/* cart badge */
+
+.cart-badge,
+.cart-badge:hover {
+  border-radius: 50%;
+  padding: 3px;
+  font-size: italic;
+  background: #000; 
+}
+
+/* Single product page - product name */
 
 .name {
   background: indigo;
